# kingfisher

./: .gitignore  README.md  pyproject.toml
docs/: CONCEPTS_SPEC.md  DESIGN_DECISIONS.md  EXTRACTION_STABILITY.md  IR_SPEC.md  OPENAI_EXTRACTION.md  OPERATORS.md  PHASE_10.md  QUICKSTART_OPENAI.md  QUICKSTART_PHASE4.md  SOLVER_TRACE.md  VALIDATION_RULES.md
examples/: phase0_examples.json
examples/expected/: mf2f_algebra_2rootsintpoly_am10tap11eqasqpam110.json  mf2f_algebra_2rootsintpoly_am10tap11eqasqpam110.md  mf2f_amc12a_2009_p5.json  mf2f_amc12a_2009_p5.md  mf2f_amc12a_2015_p10.json  mf2f_amc12a_2015_p10.md  mf2f_induction_divisibility_3divnto3m2n.json  mf2f_induction_divisibility_3divnto3m2n.md  mf2f_induction_sum_1oktkp1.json  mf2f_induction_sum_1oktkp1.md  mf2f_mathd_algebra_17.json  mf2f_mathd_algebra_17.md  mf2f_mathd_algebra_48.json  mf2f_mathd_algebra_48.md
examples/mock_llm/: mock_responses.json
examples/problems/: mf2f_algebra_2rootsintpoly_am10tap11eqasqpam110.txt  mf2f_amc12a_2009_p5.txt  (+5 more)
mvir/: __init__.py
scripts/: generate_phase0_examples.py  run_golden.py
tests/: test_ast.py  test_ast_contract.py  test_ast_normalize.py  test_ast_normalize_contract_integration.py  test_cli_formalize.py  test_cli_formalize_dir.py  test_cli_formalize_dir_openai_offline.py  test_cli_golden.py  test_cli_preprocess.py  test_cli_validate.py  test_formalize_normalization_hook.py  test_goal_validation.py  test_golden_runner_offline.py  test_mvir_fixtures.py  test_operators.py  test_preprocess_context.py  test_repair_prompt_contains_constraints.py  test_schema_export.py
(+125 files in other folders)
